2002/12/07 08:55:59  Vincent Lefevre <vincent@vinc17.org>

	* po/fr.po: update

2002/12/07 08:55:23  Paul Walker <paul@black-sun.demon.co.uk>

	* pgppubring.c: Fix a compilation warning.

2002/12/07 08:53:21  Thomas Roessler <roessler@does-not-exist.org>

	* mh.c, mutt.h, muttlib.c: Gracefully handle unknown maildir flags.

2002/12/06 11:30:08  Thomas Roessler <roessler@does-not-exist.org>

	* Makefile.am: Run check_sec.sh before committing.

2002/12/06 11:28:30  Brendan Cully <brendan@kublai.com>

	* m4/gettext.m4, m4/iconv.m4, build-release, configure.in: autoconf cleanup.

2002/12/06 11:14:13  Thomas Roessler <roessler@does-not-exist.org>

	* po/zh_CN.po, po/zh_TW.po, po/uk.po, po/ru.po, po/sk.po, po/sv.po, po/tr.po, po/lt.po, po/nl.po, po/pl.po, po/pt_BR.po, po/gl.po, po/hu.po, po/id.po, po/it.po, po/ja.po, po/ko.po, po/el.po, po/eo.po, po/es.po, po/et.po, po/fr.po, po/da.po, po/de.po, VERSION, po/ca.po, po/cs.po, reldate.h, ChangeLog: automatic post-release commit for mutt-1.5.2

	* curs_lib.c, pgppubring.c: Fixing a number of traditional malloc calls which have made their
	way into the code.

	* build-release: Don't post announcements automatically for the moment.

2002/12/05 22:30:02  Michael Elkins <me@sigpipe.org>

	* doc/manual.sgml.head: Fix #1398.

2002/11/25 14:16:47  Lars Hecking <lhecking@nmrc.ucc.ie>

	* sendlib.c, ChangeLog, INSTALL, charset.h, configure.in: The noiconv patch.

2002/11/14 08:12:30  Michael Elkins <me@sigpipe.org>

	* curs_lib.c: Fix #1388.

2002/11/13 10:10:52  Thomas Roessler <roessler@does-not-exist.org>

	* main.c: A description of -A was lacking from the help string.

	* doc/manual.sgml.head, doc/mutt.man, main.c, protos.h: Add a new command line option -A which is used to expand aliases.

	* keymap.c: Add a safeguard #ifdef for the KEY_BTAB entry.  Suggested by Thomas
	Dickey.

2002/11/12 09:20:30  Michael Elkins <me@sigpipe.org>

	* keymap.c: Tell mutt about the back-tab key (shift tab).
